--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,18 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "SistemaMedico";
+    Layout = "_LoginLayout";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Welcome2</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div>
+
+<div class="mb-3">
+    <label for="formGroupExampleInput" class="form-label">Usuario</label>
+    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Ingrese usuario">
+</div>
+<div class="mb-3">
+    <label for="formGroupExampleInput2" class="form-label">Contraseña</label>
+    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Ingrese contraseña">
 </div>
