--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Login";
+    Layout = "_LoginLayout";
 }
 <div class="container">
     <div class="row justify-content-center">
@@ -24,7 +25,7 @@
                         <div class="invalid-feedback">Por favor, ingresa tu contraseña.</div>
                     </div>
 
-                    <button type="submit" class="btn btn-primary w-100">Iniciar sesión</button>
+                    <button type="submit" class="btn btn-primary w-100" id="btn-login">Iniciar sesión</button>
                 </div>
             </div>
         </div>
