--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -18,5 +18,16 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+}
+
+.container {
+    flex: 1;
+}
+
+.footer {
+    margin-top: auto;
 }
